// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LearnerActivityTable renders active learners table correctly 1`] = `
<div>
  <div
    class="active-week"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="table-responsive"
        >
          <table
            class="table table-sm table-striped"
          >
            <thead
              class=""
            >
              <tr
                class=""
              >
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Email
                      <span
                        class="sr-only"
                      >
                         
                        sort ascending
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort-asc"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Course Title
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Course Price
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Start Date
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      End Date
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Passed Date
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Current Grade
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Progress Status
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Last Activity Date
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              class=""
            >
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <span
                    data-hj-suppress="true"
                  >
                    awesome.me@example.com
                  </span>
                </td>
                <td
                  class=""
                >
                  Dive into ReactJS
                </td>
                <td
                  class=""
                >
                  $200
                </td>
                <td
                  class=""
                >
                  October 21, 2017
                </td>
                <td
                  class=""
                >
                  May 13, 2018
                </td>
                <td
                  class=""
                >
                  September 23, 2018
                </td>
                <td
                  class=""
                >
                  66%
                </td>
                <td
                  class=""
                >
                  Failed
                </td>
                <td
                  class=""
                >
                  September 22, 2018
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <span
                    data-hj-suppress="true"
                  >
                    new@example.com
                  </span>
                </td>
                <td
                  class=""
                >
                  Redux with ReactJS
                </td>
                <td
                  class=""
                >
                  $200
                </td>
                <td
                  class=""
                >
                  October 21, 2017
                </td>
                <td
                  class=""
                >
                  May 13, 2018
                </td>
                <td
                  class=""
                >
                  September 22, 2018
                </td>
                <td
                  class=""
                >
                  80%
                </td>
                <td
                  class=""
                >
                  Passed
                </td>
                <td
                  class=""
                >
                  September 25, 2018
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="row mt-2"
    >
      <div
        class="col d-flex justify-content-center"
      >
        <nav
          aria-label="active-week-pagination"
          class="pagination-default"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            aria-relevant="text"
            class="sr-only"
          >
            Page 1, Current Page, of 1
          </div>
          <ul
            class="pagination"
          >
            <li
              class="page-item disabled"
            >
              <button
                aria-label="Previous"
                class="previous page-link btn btn-primary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div>
                  <span
                    class="pgn__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  Previous
                </div>
              </button>
            </li>
            <li
              class="page-item disabled"
            >
              <button
                aria-label="Next"
                class="next page-link btn btn-primary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div>
                  Next
                  <span
                    class="pgn__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`LearnerActivityTable renders empty state correctly 1`] = `
<div>
  <div
    class="fade alert-content alert alert-warning show"
    role="alert"
  >
    <span
      class="pgn__icon alert-icon"
    >
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 15h-2v-2h2v2Zm0-4h-2V7h2v6Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="pgn__alert-message-wrapper"
    >
      <div
        class="alert-message-content"
      >
        There are no results.
      </div>
    </div>
  </div>
</div>
`;

exports[`LearnerActivityTable renders inactive past month learners table correctly 1`] = `
<div>
  <div
    class="inactive-month"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="table-responsive"
        >
          <table
            class="table table-sm table-striped"
          >
            <thead
              class=""
            >
              <tr
                class=""
              >
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Email
                      <span
                        class="sr-only"
                      >
                         
                        sort ascending
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort-asc"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Course Title
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Course Price
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Start Date
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      End Date
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Current Grade
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Progress Status
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Last Activity Date
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              class=""
            >
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <span
                    data-hj-suppress="true"
                  >
                    awesome.me@example.com
                  </span>
                </td>
                <td
                  class=""
                >
                  Dive into ReactJS
                </td>
                <td
                  class=""
                >
                  $200
                </td>
                <td
                  class=""
                >
                  October 21, 2017
                </td>
                <td
                  class=""
                >
                  May 13, 2018
                </td>
                <td
                  class=""
                >
                  66%
                </td>
                <td
                  class=""
                >
                  Failed
                </td>
                <td
                  class=""
                >
                  September 22, 2018
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <span
                    data-hj-suppress="true"
                  >
                    new@example.com
                  </span>
                </td>
                <td
                  class=""
                >
                  Redux with ReactJS
                </td>
                <td
                  class=""
                >
                  $200
                </td>
                <td
                  class=""
                >
                  October 21, 2017
                </td>
                <td
                  class=""
                >
                  May 13, 2018
                </td>
                <td
                  class=""
                >
                  80%
                </td>
                <td
                  class=""
                >
                  Passed
                </td>
                <td
                  class=""
                >
                  September 25, 2018
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="row mt-2"
    >
      <div
        class="col d-flex justify-content-center"
      >
        <nav
          aria-label="inactive-month-pagination"
          class="pagination-default"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            aria-relevant="text"
            class="sr-only"
          >
            Page 1, Current Page, of 1
          </div>
          <ul
            class="pagination"
          >
            <li
              class="page-item disabled"
            >
              <button
                aria-label="Previous"
                class="previous page-link btn btn-primary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div>
                  <span
                    class="pgn__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  Previous
                </div>
              </button>
            </li>
            <li
              class="page-item disabled"
            >
              <button
                aria-label="Next"
                class="next page-link btn btn-primary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div>
                  Next
                  <span
                    class="pgn__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`LearnerActivityTable renders inactive past week learners table correctly 1`] = `
<div>
  <div
    class="inactive-week"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="table-responsive"
        >
          <table
            class="table table-sm table-striped"
          >
            <thead
              class=""
            >
              <tr
                class=""
              >
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Email
                      <span
                        class="sr-only"
                      >
                         
                        sort ascending
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort-asc"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Course Title
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Course Price
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Start Date
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      End Date
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Current Grade
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Progress Status
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  class="sortable"
                  scope="col"
                >
                  <button
                    class="btn btn-header"
                    type="button"
                  >
                    <span>
                      Last Activity Date
                      <span
                        class="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden="true"
                        class="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              class=""
            >
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <span
                    data-hj-suppress="true"
                  >
                    awesome.me@example.com
                  </span>
                </td>
                <td
                  class=""
                >
                  Dive into ReactJS
                </td>
                <td
                  class=""
                >
                  $200
                </td>
                <td
                  class=""
                >
                  October 21, 2017
                </td>
                <td
                  class=""
                >
                  May 13, 2018
                </td>
                <td
                  class=""
                >
                  66%
                </td>
                <td
                  class=""
                >
                  Failed
                </td>
                <td
                  class=""
                >
                  September 22, 2018
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <span
                    data-hj-suppress="true"
                  >
                    new@example.com
                  </span>
                </td>
                <td
                  class=""
                >
                  Redux with ReactJS
                </td>
                <td
                  class=""
                >
                  $200
                </td>
                <td
                  class=""
                >
                  October 21, 2017
                </td>
                <td
                  class=""
                >
                  May 13, 2018
                </td>
                <td
                  class=""
                >
                  80%
                </td>
                <td
                  class=""
                >
                  Passed
                </td>
                <td
                  class=""
                >
                  September 25, 2018
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      class="row mt-2"
    >
      <div
        class="col d-flex justify-content-center"
      >
        <nav
          aria-label="inactive-week-pagination"
          class="pagination-default"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            aria-relevant="text"
            class="sr-only"
          >
            Page 1, Current Page, of 1
          </div>
          <ul
            class="pagination"
          >
            <li
              class="page-item disabled"
            >
              <button
                aria-label="Previous"
                class="previous page-link btn btn-primary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div>
                  <span
                    class="pgn__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  Previous
                </div>
              </button>
            </li>
            <li
              class="page-item disabled"
            >
              <button
                aria-label="Next"
                class="next page-link btn btn-primary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <div>
                  Next
                  <span
                    class="pgn__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="24"
                      role="img"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
